# GpuMate

./: CMakeLists.txt  CMakePresets.json
GpuMate/: CMakeLists.txt
GpuMate/include/gpu_mate/: gpu_blas.h  gpu_runtime.h
GpuMate/include/gpu_mate/internal/: defines.h  utils.h
GpuMate/include/gpu_mate/utility/: device_buffer.h  gpu_buffer.h
GpuMate/src/amd/: amd_blas_impl.cc  amd_runtime_impl.cc
GpuMate/src/nvidia/: nvidia_blas_impl.cc  nvidia_runtime_impl.cc
GpuMate/src/utility/: device_buffer.cc  gpu_buffer.cc
GpuMate/test/: CMakeLists.txt  test_blas.cc  test_device_buffer.cc  test_gpu_buffer.cc  test_runtime.cc  test_runtime_device.cc  test_runtime_error.cc  test_runtime_memory.cc
cmake/: FetchGTest.cmake  InstallConfig.cmake  InstallConfig.cmake.in  InstallTargets.cmake
